#    arc diff <cluster commit id> Changelog
# It is also a good idea to take a look on:
#    yt/server/master/cell_master/serialize.cpp - if the version differs, then the update should be done with master snapshots (+ --set-read-only).
#    yt/server/node/tablet_node/serialize.cpp - if the version differs, then the update should be done with tablet cell recreation.

* babenko: Degraded cells are considered healthy. Update masters via snapshots.
* babenko: "move" verb now respects "preserve_creation_time" option. Update masters via snapshot.
* gritukan: Added last leader change time in cell. Update masters via snapshot.
* ifsmirnov: Disallow changing bundle for mounted tables beyond the portal. Update masters via snapshot.
* shakurov: YT-13126. "expiration_timeout" attribute. Update masters via snapshot.
* ifsmirnov: Abandon dynamic stores. Update masters via snapshot.
* ifsmirnov: Fix forgotten chunk view in overwrite bulk insert. Update masters via snapshot.
* shakurov: YT-13003. New dynconfig options. Update masters via snapshot.
* levysotsky: Added float and json types. Update masters via snapshot.
* gritukan: |Multiset| semantics changed. Update masters via snapshot.
* shakurov: Unconditionally opaque portal entrances. Update masters via snapshot.
* s-v-m: Added subject aliases. Update masters via snapshot.
* shakurov: YT-13015. Update masters via snapshot.
* gritukan: Master config changed. Update masters via snapshot.
* gritukan: Tasks information added to operation archive. Update operation archive to version 35.
* shakurov: BeginUpload behavior has changed by commit c367763748. Update masters via snapshot.
* gritukan: Exec attributes added to job archive. Update operation archive to version 34.
* gritukan: Node heartbeat processing semantics changed. Update masters via snapshot and do not change node tablet slot count if this commit is not at masters.